ingress/staging/ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-a
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "efk.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: elasticsearch-master-headless
            port:
              number: 9200
